--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
-    "duckduckgo-search>=8.1.1",
+    "ddgs",
     "fastapi>=0.122.0",
     "langchain>=1.0.0",
     "langchain-community>=0.4.1",
@@ -21,6 +21,11 @@ dependencies = [
     "tabulate>=0.9.0",
     "uvicorn>=0.38.0",
     "yfinance>=0.2.66",
+    "uvicorn>=0.38.0",
+    "yfinance>=0.2.66",
+    # Added dependencies for technical analysis tools
+    "pandas>=2.2.2", 
+    "numpy>=1.26.4", 
 ]
 
 [dependency-groups]
